--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,14 +1,16 @@
 <header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'blog:index' %}">Home</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Música</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
         <div class="search-bar">
-            <input type="text" placeholder="Pesquisar...">
-            <button>Buscar</button>
+            <form method="get" action="{% url 'blog:search' %}">
+                <input type="text" name="search" placeholder="Pesquisar..." value="{{ request.GET.search }}">
+                <button type="submit">Buscar</button>
+            </form>
         </div>
     </nav>
 </header>
